--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "4.17.1",
     "express-formidable": "1.0.0",
     "i18next": "^19.1.0",
+    "i18next-browser-languagedetector": "^5.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "8.3.0",
     "lodash": "^4.17.19",
