--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mongoose": "5.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.7",
     "react-i18next": "^11.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
