--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@types/react-router-dom": "^5.1.2",
     "cross-env": "^5.2.0",
     "eslint-plugin-baseui": "^9.85.2",
-    "husky": "^2.5.0",
-    "lint-staged": "^8.2.1"
+    "husky": ">=4",
+    "lint-staged": ">=10"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -84,10 +84,10 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "client/src/**/*.{js,jsx,ts,tsx}": [
       "tslint --fix --project  ./tsconfig.json"
     ],
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "client/src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write",
       "git add"
     ]
