--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@csstools/normalize.css": "^10.1.0",
+    "@hookform/resolvers": "^0.0.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -53,7 +54,8 @@
     "redux-thunk": "^2.3.0",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@types/react-redux": "7.1.9",
