Setup Football API, added select component and so more

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/styletron-engine-atomic": "^1.1.0",
     "@types/styletron-react": "^5.0.2",
     "@types/styletron-standard": "^2.0.0",
+    "@types/yup": "^0.29.3",
     "baseui": "^9.70.0",
     "bcrypt": "^4.0.1",
     "body-parser": "1.18.3",
@@ -35,12 +36,15 @@
     "dotenv": "6.0.0",
     "express": "4.17.1",
     "express-formidable": "1.0.0",
+    "express-validator": "^6.6.0",
     "i18next": "^19.1.0",
     "i18next-browser-languagedetector": "^5.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "8.3.0",
     "lodash": "^4.17.19",
     "mongoose": "5.1.6",
+    "nodemailer": "^6.4.10",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.0.7",
