--- a/client/.env.production
+++ b/client/.env.production
@@ -1,1 +1,3 @@
 REACT_APP_DEBUG_MODE=false
+REACT_APP_API_FOOTBALL_URL=https://api.football-data.org
+REACT_APP_API_FOOTBALL_TOKEN=3a70f7d0b5a641ffabf816fedab834db
