--- a/client/package.json
+++ b/client/package.json
@@ -10,5 +10,5 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3002"
+  "proxy": "https://localhost:3002"
 }
