--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "dotenv": "6.0.0",
     "express": "4.17.1",
+    "express-csp-header": "^4.0.0",
     "express-formidable": "1.0.0",
     "express-validator": "^6.6.0",
     "i18next": "^19.1.0",
